--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mixpanel": "^0.17.0",
     "msgpack-lite": "^0.1.26",
     "phaser": "^3.55.2",
+    "phaser-raycaster": "^0.10.4",
     "phaser3-rex-plugins": "1.1.70",
     "public-ip": "^2.5.0",
     "q": "^1.5.1",
