--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
         "IgeBase": "writable",
         "IgeBaseScene": "writable",
         "IgeCamera": "writable",
-        "IgeCellSheet": "writable",
+        //"IgeCellSheet": "writable",
         "IgeClass": "writable",
         "IgeCollisionMap2d": "writable",
         "IgeDummyCanvas": "writable",
@@ -57,9 +57,9 @@
         "IgeScene2d": "writable",
         "IgeSceneGraph": "writable",
         "IgeSpriteSheet": "writable",
-        "IgeTexture": "writable",
-        "IgeTextureAtlas": "writable",
-        "IgeTextureMap": "writable",
+        //"IgeTexture": "writable",
+        //"IgeTextureAtlas": "writable",
+        //"IgeTextureMap": "writable",
         "IgeTileMap2d": "writable",
         "IgeTimeout": "writable",
         "IgeTween": "writable",
