--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
         "IgeCamera": "writable",
         //"IgeCellSheet": "writable",
         "IgeClass": "writable",
-        "IgeCollisionMap2d": "writable",
+        //"IgeCollisionMap2d": "writable",
         "IgeDummyCanvas": "writable",
         "IgeDummyContext": "writable",
         "IgeEngine": "writable",
@@ -39,14 +39,14 @@
         "IgeFilters": "writable",
         "IgeFontEntity": "writable",
         "IgeFontSheet": "writable",
-        "IgeFSM": "writable",
-        "IgeInterval": "writable",
+        //"IgeFSM": "writable",
+        //"IgeInterval": "writable",
         "IgeMap2d": "writable",
-        "IgeMapStack2d": "writable",
+        //"IgeMapStack2d": "writable",
         "IgeMatrix2d": "writable",
         "IgeObject": "writable",
-        "IgeParticle": "writable",
-        "IgeParticleEmitter": "writable",
+        //"IgeParticle": "writable",
+        //"IgeParticleEmitter": "writable",
         "IgePathFinder": "writable",
         "IgePathNode": "writable",
         "IgePoint2d": "writable",
@@ -61,10 +61,10 @@
         //"IgeTextureAtlas": "writable",
         //"IgeTextureMap": "writable",
         "IgeTileMap2d": "writable",
-        "IgeTimeout": "writable",
+        //"IgeTimeout": "writable",
         "IgeTween": "writable",
-        "IgeUiElement": "writable",
-        "IgeUiEntity": "writable",
+        //"IgeUiElement": "writable",
+        //"IgeUiEntity": "writable",
         "IgeViewport": "writable"
     },
     "plugins": [
